--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "electron-quick-start",
+  "name": "application-form",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "A clone for SAP HR module which allows employees to register their application",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "repository": "https://github.com/bonny-dev/SAP-HR-module.git",
+  "author": "BonnyDev",
+  "license": "MIT",
   "devDependencies": {
     "electron": "^5.0.0"
+  },
+  "dependencies": {
+    "mongodb": "^3.2.3"
   }
 }
